[WIP] Base structure and Unit Test

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -42,6 +42,9 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
+  "testables": [
+    "com.svermeulen.extenject"
+  ],
   "scopedRegistries": [
     {
       "name": "package.openupm.com",
