--- a/Packages/com.cantetf.Terraformer/Editor/com.cantetf.Terraformer.Editor.asmdef
+++ b/Packages/com.cantetf.Terraformer/Editor/com.cantetf.Terraformer.Editor.asmdef
@@ -1,3 +1,19 @@
-﻿{
-  "name": "com.cantetf.Terraformer.Editor"
+{
+    "name": "com.cantetf.Terraformer.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:343deaaf83e0cee4ca978e7df0b80d21",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab",
+        "GUID:ef3db61b87933834f8bf26199d5ebe66",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
