--- a/Packages/com.cantetf.Terraformer/Runtime/com.cantetf.Terraformer.asmdef
+++ b/Packages/com.cantetf.Terraformer/Runtime/com.cantetf.Terraformer.asmdef
@@ -1,3 +1,18 @@
-﻿{
-  "name": "com.cantetf.Terraformer"
+{
+    "name": "com.cantetf.terraformer",
+    "rootNamespace": "Terraformer",
+    "references": [
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:343deaaf83e0cee4ca978e7df0b80d21",
+        "GUID:2bafac87e7f4b9b418d9448d219b01ab"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
